--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "plugins": ["tailwindcss", "unused-imports"],
+  "extends": ["next/core-web-vitals", "next/typescript", "prettier", "plugin:tailwindcss/recommended"],
+  "rules": {
+    "semi": "error",
+    "tailwindcss/no-custom-classname": "off",
+    "unused-imports/no-unused-imports": "warn",
+    "unused-imports/no-unused-vars": "warn"
+  }
 }
